# topogmesh

./: .gitignore  LICENCE  MANIFEST.in  NOTICE  README.md  everest.3mf  pyproject.toml
topogmesh/: __init__.py  cli.py  export.py  file_reader.py  geo_utils.py  hm_utils.py  main.py  mesh.py  mesh_generator.py  webscraper.py
